--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,8 @@ name: Run Node Project
 on:
   push:  # 推送代码时触发
     branches: [main]
-  schedule:  # 定时触发，每天0点执行（cron表达式）
-    - cron: '0 0 * * *'
+  schedule:  # 定时每8分钟执行一次
+    - cron: '*/8 * * * *'
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -16,4 +16,4 @@ jobs:
       - name: Install dependencies
         run: npm install  # 安装依赖
       - name: Run project
-        run: node index.js  # 执行项目启动命令，这里假设启动脚本是index.js，你按需修改
+        run: node index.js  # 执行项目启动命令，按需修改
